apps/home/template/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${APP_NAMESPACE}
  labels:
    app.kubernetes.io/name: ${APP_NAME}
