apps/home/template/k8s/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP_NAME}-netpol
  namespace: ${APP_NAMESPACE}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ${APP_NAME}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: apisix
          matchNamespaces:
            - apisix
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - all
